--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 #spring.mvc.servlet.load-on-startup=100
 server.port=8080
-server.servlet.context-path=/crud
+#server.servlet.context-path=/crud
 
+# \u65E5\u671F\u683C\u5F0F\u5316
+spring.mvc.date-format=yyyy-MM-dd
+# \u7981\u7528\u6A21\u677F\u5F15\u64CE\u7F13\u5B58
+spring.thymeleaf.cache=false
+# \u56FD\u9645\u5316
 spring.messages.basename=i18n.login
